force-app/main/default/objects/Opportunity/fields/Agency_Account__c.field-meta.xml
<CustomField>
    <fullName>Agency_Account__c</fullName>
    <label>Agency Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agency Advertising Opportunities</relationshipLabel>
    <relationshipName>Agency_Advertising_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>