force-app/main/default/objects/Opportunity/fields/Matrix_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Last_Synced__c</fullName>
    <description>Timestamp of the most recent successful sync to Matrix. Used for conflict detection: if the record was modified in Salesforce after this timestamp, a two-way conflict may exist.</description>
    <label>Matrix Last Synced</label>
    <type>DateTime</type>
</CustomField>