force-app/main/default/objects/Opportunity/fields/Matrix_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Order_ID__c</fullName>
    <description>The order identifier assigned by the Matrix system after a successful sync. Used to update or cancel the order in Matrix on subsequent changes.</description>
    <externalId>true</externalId>
    <label>Matrix Order ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>