force-app/main/default/objects/Opportunity/fields/Matrix_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Sync_Error__c</fullName>
    <description>The error message from the most recent failed Matrix sync attempt. Cleared on the next successful sync.</description>
    <label>Matrix Sync Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>