force-app/main/default/objects/Opportunity/fields/Pitch_Project__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pitch Project</label>
    <referenceTo>Pitch_Project__c</referenceTo>
    <relationshipLabel>Pitched Opportunities</relationshipLabel>
    <relationshipName>Pitched_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>