force-app/main/default/objects/Opportunity/fields/Primary_Category__c.field-meta.xml
<CustomField>
    <fullName>Primary_Category__c</fullName>
    <label>Primary Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>