force-app/main/default/objects/Opportunity/fields/Proposal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Notes__c</fullName>
    <label>Proposal Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>