force-app/main/default/objects/Opportunity/recordTypes/Agency_Buy.recordType-meta.xml
<RecordType>
    <fullName>Agency_Buy</fullName>
    <active>false</active>
    <businessProcess>Default_Sales_Process</businessProcess>
    <description>Agency-placed buy — opportunity sourced through an advertising agency. Maps to Media Cloud Media Plan (Agency).</description>
    <label>Agency Buy</label>
</RecordType>