force-app/main/default/objects/Opportunity/recordTypes/Digital.recordType-meta.xml
<RecordType>
    <fullName>Digital</fullName>
    <active>true</active>
    <businessProcess>Default_Sales_Process</businessProcess>
    <description>Digital ad sales (owned digital properties, programmatic, streaming display). Reconciled from Operative (Operative_to Matrix feed).</description>
    <label>Digital</label>
</RecordType>