force-app/main/default/objects/Opportunity/recordTypes/Direct_Buy.recordType-meta.xml
<RecordType>
    <fullName>Direct_Buy</fullName>
    <active>true</active>
    <businessProcess>Default_Sales_Process</businessProcess>
    <description>Direct advertiser buy — placed directly with Univision, no agency intermediary. Maps to Media Cloud Media Plan (Direct).</description>
    <label>Direct Buy</label>
</RecordType>