force-app/main/default/objects/Opportunity/recordTypes/Local_Ad_Sales.recordType-meta.xml
<RecordType>
    <fullName>Local_Ad_Sales</fullName>
    <active>true</active>
    <description>Local direct ad sales — opportunity created via the guided proposal flow. Used for station-level direct buys where a salesperson walks through flight dates, daypart, demo targets, and rate card selection to generate a printable proposal.</description>
    <label>Local Ad Sales</label>
</RecordType>