force-app/main/default/objects/Opportunity/recordTypes/Radio_Digital.recordType-meta.xml
<RecordType>
    <fullName>Radio_Digital</fullName>
    <active>true</active>
    <businessProcess>Default_Sales_Process</businessProcess>
    <description>Radio digital (streaming audio, podcasts, station live-streams). Source-system mapping TBD — see project_open_questions.md memory.</description>
    <label>Radio - Digital</label>
</RecordType>