force-app/main/default/objects/Opportunity/recordTypes/Radio_Linear.recordType-meta.xml
<RecordType>
    <fullName>Radio_Linear</fullName>
    <active>true</active>
    <businessProcess>Default_Sales_Process</businessProcess>
    <description>Radio linear (owned-and-operated stations, e.g. KHOT-FM). Reconciled from WideOrbit Radio (WO_Radio_Allspots + WO_Radio_Preempts feeds).</description>
    <label>Radio - Linear</label>
</RecordType>