force-app/main/default/objects/Opportunity/recordTypes/Radio_Network.recordType-meta.xml
<RecordType>
    <fullName>Radio_Network</fullName>
    <active>true</active>
    <businessProcess>Default_Sales_Process</businessProcess>
    <description>Radio network programming (Univision Radio O&amp;O networks: BMF, GOLD NETWORK, PLATINUM NETWORK, TUDN AFF, etc.). Reconciled from Counterpoint (Counterpoint BCast / Counterpoint Calendar feeds).</description>
    <label>Radio - Network</label>
</RecordType>