force-app/main/default/objects/Opportunity/recordTypes/TV_Affiliates.recordType-meta.xml
<RecordType>
    <fullName>TV_Affiliates</fullName>
    <active>true</active>
    <businessProcess>Default_Sales_Process</businessProcess>
    <description>TV affiliate stations (Univision affiliate broadcasters). Reconciled from Strata (REP_FIRM = "UNIVISION - AFFILIATE") and CoxReps_Locality feeds.</description>
    <label>TV - Affiliates</label>
</RecordType>