force-app/main/default/objects/Opportunity/recordTypes/TV_Border_Stations.recordType-meta.xml
<RecordType>
    <fullName>TV_Border_Stations</fullName>
    <active>true</active>
    <businessProcess>Default_Sales_Process</businessProcess>
    <description>TV border stations (US-Mexico border-region broadcast). Source-system mapping TBD — see project_open_questions.md memory.</description>
    <label>TV Border Stations</label>
</RecordType>