force-app/main/default/objects/Opportunity/recordTypes/TV_Linear.recordType-meta.xml
<RecordType>
    <fullName>TV_Linear</fullName>
    <active>true</active>
    <businessProcess>Default_Sales_Process</businessProcess>
    <description>TV linear (owned-and-operated stations, e.g. KXLN). Reconciled from WideOrbit TV (WO_TV_Allspots feed).</description>
    <label>TV - Linear</label>
</RecordType>