force-app/main/default/objects/Opportunity/listViews/Pipeline_Kanban.listView-meta.xml
<ListView>
    <fullName>Pipeline_Kanban</fullName>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>STAGE_NAME</columns>
    <columns>AMOUNT</columns>
    <columns>CLOSE_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_CLOSED</field>
        <operation>equals</operation>
        <value>false</value>
    </filters>
    <label>Pipeline Kanban</label>
</ListView>